<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".CloudSaveActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical">

        <LinearLayout
            android:id="@+id/grpSaveLoad"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="-100dp"
            android:gravity="center_vertical|center_horizontal"
            android:visibility="gone"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/btnSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save" />

            <Button
                android:id="@+id/btnLoad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/load" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/grpConfirm"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginTop="-100dp"
            android:gravity="center_horizontal|top"
            android:orientation="vertical"
            android:visibility="visible"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/lblConfirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/confirm_save"
                android:textColor="#fff"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal">

                <Button
                    android:id="@+id/btnYes"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:text="@string/yes"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/btnNo"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:text="@string/no"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/btnOk"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:text="@string/ok"
                    android:textSize="18sp" />
            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>

    <Button
        android:id="@+id/btnExit"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/exit"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>